<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_colour"
    tools:context=".AddActivity">

    <Button
        android:id="@+id/button6"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="119dp"
        android:background="@color/buttonColor"
        android:text="Nieodpowienia niewierzchnia drogi" />

    <Button
        android:id="@+id/button5"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="178dp"
        android:background="@color/buttonColor"
        android:text="Nieodpowiednia szerokość drogi" />

    <Button
        android:id="@+id/button4"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="235dp"
        android:background="@color/buttonColor"
        android:text="Duży kąt nachylenia drogi" />

    <Button
        android:id="@+id/button"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="292dp"
        android:background="@color/buttonColor"
        android:text="Schody bez podjazdu" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="190dp"
        android:layout_height="59dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/report"
        android:textColor="#00416A"
        android:textSize="35sp" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="282dp"
        android:layout_height="87dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/button6"
        android:layout_marginTop="121dp"
        android:text="@string/write"
        android:textColor="#00416A"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="114dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/empty" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/button6"
        android:layout_marginTop="223dp"
        android:text="@string/why"
        android:textColor="#00416A"
        android:textSize="28sp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:text="Dodaj z obecnej lokalizacji"
        android:background="#C7DAE1"/>

</RelativeLayout>